2009-07-20  Adam Treat  <adam.treat@torchmobile.com>

        Reviewed by David Levin.

        Add cpplint check for proper include order
        https://bugs.webkit.org/show_bug.cgi?id=27462

        Add a new check to cpplint to flag cases where the include section of a file
        does not match the mandated include order and style of the Webkit coding style
        guidelines.

        Add associated tests.

        * Scripts/modules/cpplint.py:
        * Scripts/modules/cpplint_unittest.py:

2009-07-21  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by David Levin.

        Support lint for patches
        https://bugs.webkit.org/show_bug.cgi?id=27291

        Add run-webkit-lint script, which lints recent changes in local
        repository.  Also, modified cpplint.py so that we don't need to
        specify verbose level for process_file().

        * Scripts/modules/cpplint.py:
        * Scripts/run-webkit-lint: Added.

2009-07-21  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by David Levin.

        diff_parser should accept lines without trailing \n
        https://bugs.webkit.org/show_bug.cgi?id=27483

        Normalize the input lines by removing a trailing newline.
        Also, add a case for unittest for newly added files.

        * Scripts/modules/diff_parser.py:
        * Scripts/modules/diff_parser_unittest.py:

2009-07-21  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by David Levin.

        cpplint.py's process_file() should accept customized error function
        https://bugs.webkit.org/show_bug.cgi?id=27487

        * Scripts/modules/cpplint.py:

2009-07-21  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by David Levin.

        cpplint.py should have an interface to get global error count
        https://bugs.webkit.org/show_bug.cgi?id=27486

        * Scripts/modules/cpplint.py:
        * Scripts/modules/cpplint_unittest.py:

2009-07-21  Shinichiro Hamaji  <hamaji@chromium.org>
