@@ -1,3 +1,13 @@
+2009-07-20  Jakob Petsovits  <jakob.petsovits@torchmobile.com>
+
+        Reviewed by David Levin.
+
+        Add checks for namespace indentation to cpplint.
+        https://bugs.webkit.org/show_bug.cgi?id=27461
+
+        * Scripts/modules/cpplint.py:
+        * Scripts/modules/cpplint_unittest.py:
+
 2009-07-20  Adam Treat  <adam.treat@torchmobile.com>
 
         Reviewed by David Levin.
